# stacks-usecase

./: .gitignore  .pre-commit-config.yaml  .travis.ci  .travis.yml  README.md  pyproject.toml
.ci/: run.sh
client/intelligent_collab/: LICENSE  Readme.md  authors.md  docker-compose.yml  icollab.py  pyproject.toml
client/intelligent_collab/services/device_manager/: .dockerignore  Dockerfile  Makefile  Readme.md  pyproject.toml
client/intelligent_collab/services/device_manager/src/device_manager/: api.py  config.py  test_api.py  test_util.py  util.py
client/intelligent_collab/services/device_manager/src/device_manager/scripts/: README.md  enable_virtual_camera.sh  install_virtual_camera.sh
client/intelligent_collab/services/effects_service/: .dockerignore  Dockerfile  LICENSE  Makefile  Readme.md  pyproject.toml
client/intelligent_collab/services/effects_service/client/: Readme.md  effects_client.py  requirements.txt  webcam_client.py
client/intelligent_collab/services/effects_service/src/effects_service/: api.py  config.py  effect_picker.py  effect_server.py  effect_service.py  exceptions.py  logger.py  similarity.py
client/intelligent_collab/services/effects_service/src/effects_service/effects/: base_effect.py  flip.py  obj_detect.py  obj_detect_int8.py  stylize.py  utils.py
client/intelligent_collab/services/main_controller/: Dockerfile  Makefile  Readme.md  api.py  config.py  logger.py  pyproject.toml
client/intelligent_collab/services/main_controller/src/main_controller/: api.py  config.py  logger.py
client/intelligent_collab/services/ui_controller/: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  Readme.md
client/intelligent_collab/services/ui_controller/src/ui_controller/: package-lock.json  package.json
client/intelligent_collab/services/ui_controller/src/ui_controller/src/app/: App.css  App.js  App.styles.js
client/intelligent_collab/services/ui_controller/src/ui_controller/src/components/camera-capture/: CameraCapture.js
client/intelligent_collab/services/ui_controller/src/ui_controller/src/components/effect-handler/: EffectHandler.js  EffectHandler.styles.js
client/intelligent_collab/services/ui_controller/src/ui_controller/src/components/sidebar/: Sidebar.js  Sidebar.styles.js
client/intelligent_collab/services/ui_controller/src/ui_controller/src/pages/camera-picker/: CameraPicker.js
client/intelligent_collab/services/ui_controller/src/ui_controller/src/pages/effects-controller/: EffectsController.js  EffectsController.styles.js
client/intelligent_collab/services/ui_controller/src/ui_controller/src/pages/full-camera-preview/: FullCameraPreview.js  FullCameraPreview.styles.js
client/intelligent_collab/services/ui_controller/src/ui_controller/src/pages/stream-picker/: StreamPicker.js
client/intelligent_collab/services/video_proxy/: .dockerignore  Dockerfile  LICENSE  Makefile  Readme.md  pyproject.toml
client/intelligent_collab/services/video_proxy/src/video_proxy/: api.py  config.py  logger.py  test_api.py  video_server.py  video_service.py  video_settings.py
dlrs-template-openfaas/: README.md
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
galaxy_recognition/: README.md  globals.py  inference.py  training.py
github-issue-classification/: README.md  github-notebook.ipynb
handwritten_digit_recog/: Makefile  (+1 more)
(+243 files in other folders)
