[tool.poetry]
name = "intelligent_collab"
version = "0.1.0"
description = "The Intelligent Collaboration application enables a user to modify their camera stream using AI models."
authors = ["Your Name <you@example.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "flake8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
