[tool.poetry]
name = "video_streaming_proxy"
version = "0.1.0"
description = "video estreaming proxy service"
authors = ["Your Name <you@example.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.63.0"
typer = "^0.3.2"
uvicorn = "^0.13.4"
plotbbox = "^0.1.3"
msgpack = "^1.0.2"
msgpack-numpy = "^0.4.7"
zmq = "^0.0.0"
Pillow = "^8.2.0"
matplotlib = "^3.4.2"
requests = "^2.25.1"
loguru = "^0.5.3"
pyfakewebcam = "^0.1.0"
opencv-python = "^4.5.2"


[tool.poetry.dev-dependencies]
black = "^21.4b2"
pytest = "^6.2.3"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
